reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__enums__enum.snap
---
source: reflectapi-demo/src/tests/enums.rs
expression: "super::into_input_schema::<TestEnum>().input_types"
---
{
  "types": [
    {
      "kind": "struct",
      "name": "reflectapi::Empty",
      "description": "Struct object with no fields",
      "fields": "none"
    },
    {
      "kind": "enum",
      "name": "reflectapi_demo::tests::enums::TestEnum",
      "variants": [
        {
          "name": "Variant1",
          "fields": "none"
        },
        {
          "name": "Variant2",
          "fields": "none"
        }
      ]
    }
  ]
}
