reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__enums__enum_empty.snap
---
source: reflectapi-demo/src/tests/enums.rs
expression: "super::into_input_schema::<TestEnumEmpty>().input_types"
---
{
  "types": [
    {
      "kind": "struct",
      "name": "reflectapi::Empty",
      "description": "Struct object with no fields",
      "fields": "none"
    },
    {
      "kind": "enum",
      "name": "reflectapi_demo::tests::enums::TestEnumEmpty"
    }
  ]
}
