reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__enums__enum_rename.snap
---
source: reflectapi-demo/src/tests/enums.rs
expression: "super::into_output_schema::<Nums>().output_types"
---
{
  "types": [
    {
      "kind": "struct",
      "name": "reflectapi::Infallible",
      "description": "Error object which is expected to be never returned"
    },
    {
      "kind": "enum",
      "name": "reflectapi_demo::tests::enums::Nums",
      "variants": [
        {
          "name": "Zero",
          "serde_name": "0"
        },
        {
          "name": "A"
        }
      ]
    }
  ]
}
